--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.4.1",
     "mongoose-autopopulate": "^1.0.1",
     "morgan": "^1.10.0",
