--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
