--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongoose-autopopulate": "^1.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "npm-check-updates": "^16.10.18",
     "path": "^0.12.7",
     "shortid": "^2.2.16",
     "swagger-ui-express": "^5.0.0",
